--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
   <body>
     <nav class="navbar navbar-expand-lg fixed-top">
       <div class="container">
-        <div class="navbar-brand">
-          
-        </div>
+        <div class="navbar-brand"></div>
         <button
           class="btn btn-success d-md-none"
           type="button"
